force-app/main/default/objects/Party__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>