force-app/main/default/objects/Party__c/fields/Alias_AKA__c.field-meta.xml
<CustomField>
    <fullName>Alias_AKA__c</fullName>
    <label>Alias AKA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>