force-app/main/default/objects/Party__c/fields/Continuous_Trauma__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Trauma__c</fullName>
    <label>Continuous Trauma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>