force-app/main/default/objects/Party__c/fields/Date_Of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Injury__c</fullName>
    <label>Date Of Injury</label>
    <type>Date</type>
</CustomField>