force-app/main/default/objects/Party__c/fields/Delivery_See__c.field-meta.xml
<CustomField>
    <fullName>Delivery_See__c</fullName>
    <label>Delivery See</label>
    <length>100</length>
    <type>Text</type>
</CustomField>