force-app/main/default/objects/Party__c/fields/Expected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Time__c</fullName>
    <label>Expected Date Time</label>
    <type>DateTime</type>
</CustomField>