force-app/main/default/objects/Party__c/fields/Eyes__c.field-meta.xml
<CustomField>
    <fullName>Eyes__c</fullName>
    <label>Eyes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>