force-app/main/default/objects/Party__c/fields/Full_SSN__c.field-meta.xml
<CustomField>
    <fullName>Full_SSN__c</fullName>
    <label>Full SSN</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>