force-app/main/default/objects/Party__c/fields/Full_SSN_Needed__c.field-meta.xml
<CustomField>
    <fullName>Full_SSN_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full SSN Needed</label>
    <type>Checkbox</type>
</CustomField>