force-app/main/default/objects/Party__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>