force-app/main/default/objects/Party__c/fields/Injury_Comments__c.field-meta.xml
<CustomField>
    <fullName>Injury_Comments__c</fullName>
    <label>Injury Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>