force-app/main/default/objects/Party__c/fields/Injury_Date__c.field-meta.xml
<CustomField>
    <fullName>Injury_Date__c</fullName>
    <label>Injury Date</label>
    <type>Date</type>
</CustomField>