force-app/main/default/objects/Party__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <label>Integration Key</label>
    <length>160</length>
    <type>Text</type>
</CustomField>