force-app/main/default/objects/Party__c/fields/Is_Expert_Witness__c.field-meta.xml
<CustomField>
    <fullName>Is_Expert_Witness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expert Witness</label>
    <type>Checkbox</type>
</CustomField>