force-app/main/default/objects/Party__c/fields/Legal_Case__c.field-meta.xml
<CustomField>
    <fullName>Legal_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>