force-app/main/default/objects/Party__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>