force-app/main/default/objects/Party__c/fields/Party_Address__c.field-meta.xml
<CustomField>
    <fullName>Party_Address__c</fullName>
    <label>Party Address</label>
    <type>Address</type>
</CustomField>