force-app/main/default/objects/Party__c/fields/Party_Summary__c.field-meta.xml
<CustomField>
    <fullName>Party_Summary__c</fullName>
    <label>Party Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>