force-app/main/default/objects/Party__c/fields/Party_Type_Or_Title__c.field-meta.xml
<CustomField>
    <fullName>Party_Type_Or_Title__c</fullName>
    <label>Party Type Or Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canvas Neighborhood</fullName>
            </value>
            <value>
                <fullName>Canvass Businesses</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Insured</fullName>
            </value>
            <value>
                <fullName>Other Party</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Police Report</fullName>
            </value>
            <value>
                <fullName>Scene</fullName>
            </value>
            <value>
                <fullName>Victim</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>