force-app/main/default/objects/Party__c/fields/Physical_Description__c.field-meta.xml
<CustomField>
    <fullName>Physical_Description__c</fullName>
    <label>Physical Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>