force-app/main/default/objects/Party__c/fields/Pickup_See__c.field-meta.xml
<CustomField>
    <fullName>Pickup_See__c</fullName>
    <label>Pickup See</label>
    <length>100</length>
    <type>Text</type>
</CustomField>