force-app/main/default/objects/Party__c/fields/Room_Or_Suite__c.field-meta.xml
<CustomField>
    <fullName>Room_Or_Suite__c</fullName>
    <label>Room Or Suite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>