force-app/main/default/objects/Party__c/fields/Second_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Second_Debtor__c</fullName>
    <label>Second Debtor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>