force-app/main/default/objects/Party__c/fields/Serve_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Serve_Address_Type__c</fullName>
    <label>Serve Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>