force-app/main/default/objects/Party__c/fields/Servee_Title__c.field-meta.xml
<CustomField>
    <fullName>Servee_Title__c</fullName>
    <label>Servee Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>