force-app/main/default/objects/Party__c/fields/Servee_Type__c.field-meta.xml
<CustomField>
    <fullName>Servee_Type__c</fullName>
    <label>Servee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>