force-app/main/default/objects/Party__c/fields/Serving_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Serving_Capacity__c</fullName>
    <label>Serving Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>