force-app/main/default/objects/Party__c/fields/Skin__c.field-meta.xml
<CustomField>
    <fullName>Skin__c</fullName>
    <label>Skin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>