force-app/main/default/objects/Party__c/fields/SOR_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>SOR_Party_Id__c</fullName>
    <label>SOR Party Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>