force-app/main/default/objects/Party__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties_DeliveryAccount</relationshipName>
    <type>Lookup</type>
</CustomField>