force-app/main/default/objects/Party__c/fields/Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties_PickupContact</relationshipName>
    <type>Lookup</type>
</CustomField>