force-app/main/default/objects/Party__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DataTrac</fullName>
            </value>
            <value>
                <fullName>Solaria</fullName>
            </value>
            <value>
                <fullName>Doculogix</fullName>
            </value>
            <value>
                <fullName>WinCopy-Digital</fullName>
            </value>
            <value>
                <fullName>WinCopy-Records</fullName>
            </value>
            <value>
                <fullName>CaseGator</fullName>
            </value>
            <value>
                <fullName>WinServPlus</fullName>
            </value>
            <value>
                <fullName>ProcessMaster</fullName>
            </value>
            <value>
                <fullName>ServManager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>