force-app/main/default/objects/Party__c/fields/SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4__c</fullName>
    <label>SSN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>