force-app/main/default/objects/Party__c/fields/Type_Of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Injury__c</fullName>
    <label>Type Of Injury</label>
    <type>TextArea</type>
</CustomField>