force-app/main/default/objects/Party__c/fields/Witness_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Witness_Start_Date_Time__c</fullName>
    <label>Witness Start Date Time</label>
    <type>DateTime</type>
</CustomField>