force-app/main/default/objects/Party__c/recordTypes/Deponent.recordType-meta.xml
<RecordType>
    <fullName>Deponent</fullName>
    <active>true</active>
    <label>Deponent</label>
</RecordType>