force-app/main/default/objects/Party__c/recordTypes/Servee.recordType-meta.xml
<RecordType>
    <fullName>Servee</fullName>
    <active>true</active>
    <label>Servee</label>
</RecordType>