force-app/main/default/objects/Party__c/recordTypes/Subject_Patient.recordType-meta.xml
<RecordType>
    <fullName>Subject_Patient</fullName>
    <active>true</active>
    <label>Subject/Patient</label>
</RecordType>